fix menu overflow between 1085-1230px

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,4 +1,4 @@
-.stretch-fix{
+.content-stretch-fix{
   margin: 0 auto;
   max-width: 960;
   padding: 0px 12.6rem 1.45rem;
@@ -6,12 +6,28 @@
 }
 
 @media screen and (max-width: 600px) {
-  .stretch-fix {
+  .content-stretch-fix {
     margin: 0 auto;
     max-width: 100%;
     padding: 0px 1px 1.45rem;
     padding-top: 0;
     overflow-x: hidden;
+  }
+}
+
+@media screen and (max-width: 1230px) and (min-width: 1085px) {
+  .content-stretch-fix {
+    margin: 0 auto;
+    max-width: 100%;
+    padding: 0px 12.6rem 1.45rem;
+    padding-top: 0;
+  }
+
+  .nav-stretch-fix {
+    margin: 100;
+    max-width: 100%;
+    padding: 0px 120.6rem 1.45rem;
+    padding-top: 0;
   }
 }
 
